client/src/pages/Login/login.css
/* DUNK OR FLUNK TITLE */
.Login h2{
    text-align:center;
}
/* LOGIN TITLE */
/* .Login h2{
    text-align: center;
    font-family: monospace;
    color: red;
    text-decoration: underline;
    font-weight: bolder;
} */
/* username/password */
form{
    text-align: center;
    font-family: monospace;
}
/* go to signup page */
/* .Login p{
    text-align:center;
    text-decoration: underline;
    margin-left: 3rem;
    font-family: monospace;
    font-size: xx-large;
} */
/* image for background */
#loginContainer{
    position:fixed;
    padding:0;
    margin:0;
    top:0;
    left:0;
    width: 100%;
    height: 100%;
    color:black;
    background: rgba(0,0,0,0.5) url("https://cellularnews.com/wp-content/uploads/2020/03/basketball-dark-325x485.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    cursor: url("https://img.icons8.com/color/50/000000/basketball.png"), auto;
    position: absolute;
    
}
  /* submit button */
  .btn{
      color: red;
      font-size: large;
      font-weight: 800;
      border: dashed;
      cursor: url("https://img.icons8.com/color/50/000000/basketball.png"), auto;
  }

#login-logo {
    align-self: center;
    margin-top: 45px;
}

#login-head {
    position: relative;
    bottom: 17px;
    color: #c82d2d;
    text-decoration: none;
    text-align: center;
}

#login-btn {
    background-color: #c82d2d;
    border: none;
    color: white;
}

#gotosignup {
    color: #c82d2d;
    font-size: 15px;
    position: relative;
    /* left: 115px; */
    bottom: 10px
}

.Login img{
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
}

